[tool.poetry]
name = "classification-at-top"
version = "0.1.0"
description = ""
authors = ["Vaclav Macha <vaclav.macha92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "classification_at_top", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
numpy = "^1.26.3"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
